src/views/options/layout.css
@font-face {
  font-weight: normal;
  font-style: normal;
  font-family: "Icons";
  src: url("/resources/fonts/icons.woff");
}

@font-face {
  font-weight: normal;
  font-style: normal;
  font-family: "NunitoSans Regular";
  src: url("/resources/fonts/NunitoSans-Regular.woff");
}

/* Light Theme */

.light-theme:root, :root {
  --base-color: #FFF;
  --baseSecond-color: #FBFBFB;
  --base-brighter-color: #fafafc;
  --base-invert-color: #000;
  --text-color: #555555;
  --textSecond-color: #FFF;
  --border-color: #ddd;
  --borderSecond-color: #EAEAEA;
  --borderImage-Color: url("/resources/img/dashed_border_gray.png");
  --shadow-color: #ddd;
  --shadowSecond-color:rgba(0,0,0,0.15);
  --highlighted-color: #00AAA0;
  --warning-color: #FF6347;
}

/* Dark Theme */

.dark-theme:root {
  --base-color: #303641;
  --baseSecond-color: #252a32;
  --base-brighter-color: #252a32;
  --base-invert-color: #DADADA;
  --text-color: #EBEBEB;
  --textSecond-color: #FFF;
  --border-color: #464e5e;
  --borderSecond-color: #464e5e;
  --borderImage-Color: url("/resources/img/dashed_border_dark.png");
  --shadow-color: #464e5e;
  --shadowSecond-color: rgba(200,200,200, 0.15);
  --highlighted-color: #00AAA0;
  --warning-color: #FF6347;
}

/* High Contrast Theme */

.highContrast-theme:root {
  --base-color: #000;
  --baseSecond-color: #000;
  --base-brighter-color: #000;
  --base-invert-color: #FFF;
  --text-color:#FFF;
  --textSecond-color: #000;
  --border-color:#FFF;
  --borderSecond-color: #FFF;
  --borderImage-Color: url("/resources/img/dashed_border_gray.png");
  --shadow-color: #FFF;
  --shadowSecond-color: rgba(255,255,255,0.15);
  --highlighted-color: #00ff00;
  --warning-color: #FF0000;
}

.theme-transition:root * {
  transition: all .3s !important;
}


* {
  margin: 0;
  padding: 0;
  outline: none;
  border: none;
}

*::-moz-focus-inner {
  border: 0;
}

html {
  height: 100%;
  color: var(--text-color);
  font-family: "NunitoSans Regular", "Arial", sans-serif;
}

body {
  display: flex;
  height: 100%;
  flex-direction: row;
  background: var(--baseSecond-color);
}

input,
select,
button,
textarea {
  color: var(--text-color);
  font-size: 1rem;
  font-family: inherit;
}

a {
  color: var(--highlighted-color);
  text-decoration: underline dotted;
  cursor: pointer;
}

a:hover,
a:focus {
  text-decoration: underline solid;
}

a[target="_blank"]::after {
  content: "E";
  display:inline-block;
  text-decoration: none;
  font-family: Icons;
  margin-left: 0.25em;
  font-size: 0.75em;
}

em {
  color: var(--highlighted-color);
  text-decoration: underline;
  font-style: normal;
}

hr {
  margin: 20px 0;
  border-bottom: 1px solid var(--borderSecond-color);
}

h2 {
  margin-bottom: 10px;
  font-weight: normal;
  font-size: 22px;
}

:-moz-focusring {
  outline: none;
}

/**
 * Icons classes
 **/

.icon-gear:after {
  content: "g";
  font-family: Icons;
}

.icon-arrows:after {
  content: "a";
  font-family: Icons;
}

.icon-star:after {
  content: "s";
  font-family: Icons;
}

.icon-list:after {
  content: "l";
  font-family: Icons;
}

.icon-info:after {
  content: "i";
  font-family: Icons;
}

.icon-arrow-up:after {
  content: "U";
  font-family: Icons;
}

.icon-arrow-right:after {
  content: "R";
  font-family: Icons;
}

.icon-arrow-down:after {
  content: "D";
  font-family: Icons;
}

.icon-arrow-left:after {
  content: "L";
  font-family: Icons;
}

.icon-delete:after {
  content: "X";
  font-family: Icons;
}

.icon-add:after {
  content: "+";
  font-family: Icons;
}

/**
 * Sidebar layout properties
 **/

#Sidebar {
  display: flex;
  align-items: center;
  flex-direction: column;
  flex-basis: 0;
  height: 100%;
  padding: 0 30px 0 30px;
}

.logo {
  width: 100%;
  max-width: 70px;
  margin: 40px 0 10px 0;
}

.navigation {
  list-style: none;
}

.nav-item {
  position: relative;
  margin: 30px 0;
  text-align: center;
}

.nav-item > a {
  display: flex;
  align-items: center;
  flex-direction: row;
  color: var(--text-color);
  text-decoration: none;
  font-size: 18px;
  cursor: pointer;
  transition: color .2s;
}

.nav-item-symbol {
  color: inherit;
  font-size: 30px;
  font-family: Icons;
}

.nav-item-label {
  margin-left: 15px;
  white-space: nowrap;
  color: inherit;
}

.nav-item > a:hover,
.nav-item > a.active {
  color: var(--highlighted-color);
  text-decoration: none;
}

/**
 * Theme button properties
 **/

#themeSwitch {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  row-gap: 14px;
  column-gap: 14px;
  margin-top: auto;
  padding: 40px 0;
}

.theme-button {
  appearance: none;
  width: 15px;
  height: 15px;
  border-radius: 50%;
  text-align: center;
  box-shadow: 0 0 3px 0 rgba(0,0,0,1);
  transition: box-shadow .3s;
}

.theme-button.theme-light {
  background-color: #FBFBFB;
}

.theme-button.theme-dark {
  background-color: #252A32;
}

.theme-button.theme-high-contrast {
  background: linear-gradient(-45deg,#000 0%, #000 50%, #FFF 50%, #FFF 100%);
}

.theme-button:hover {
  box-shadow: 0 0 6px 0 rgba(0,0,0,1);
}

.theme-button:checked::after {
  content: "\2022";
  position: relative;
  bottom: -75%;
  color: var(--border-color);
}

/**
 * Content layout properties
 **/

#Content {
  flex: 1;
  height: 100%;
  overflow-y: auto;
}

.content {
  display: none;
  max-width: 560px;
  padding: 30px;
}

.content:target {
  display: block;
}

#Gestures.content {
  max-width: none;
}

.content-header {
  position: relative;
  margin-bottom: 20px;
  border-bottom: 1px solid var(--borderSecond-color);
}

/**
 * Commons classes
 **/

.small-spacing {
  margin-bottom: 10px;
}

.medium-spacing {
  margin-bottom: 20px;
}

.align-content-right {
  display: flex;
  justify-content: flex-end;
  flex-wrap: wrap;
  row-gap: 15px;
  column-gap: 15px;
}

.justify-text {
  text-align: justify;
}

.small-text {
  font-size: 14px;
}

/**
 * Option list layout
 **/

.ol-section + .ol-section {
  margin-top: 20px;
  padding-top: 20px;
  border-top: 1px solid var(--borderSecond-color);
}
/* ... */

